# 2_semester

./: CMakeLists.txt  README.md  products.db  test.db
09_TDD/sql_utils/: sql_utils.c
10a_MQTT_ESP_pub/ESP32_publisher/: platformio.ini
10a_MQTT_ESP_pub/ESP32_publisher/src/: main.c  main_CRT.cpp  main_ESP_CA_WORKING.cpp  main_caveman.cpp  main_local_NOT_WORKING.cpp  main_old.cpp  main_simple.cpp  main_test_wifi.cpp  puretcp.cpp
10b_MQTT_eclipse_pub_sub/paho_mqtt/: products.db
10b_MQTT_eclipse_pub_sub/paho_mqtt/_old/: publisher  publisher.cpp  subscriber  subscriber.cpp
10b_MQTT_eclipse_pub_sub/paho_mqtt/sql_utils/: sql_utils.c  sql_utils.h
10b_MQTT_eclipse_pub_sub/paho_mqtt/src/: subscriber  subscriber.cpp  subscriber_simple.cpp
Uge_09_TDD/main/: subscriber.cpp
main/: subscriber  test.cpp
sql_utils/: readme.md  sql_utils.c  sql_utils.h
